2003-11-20  Pavel Roskin  <proski@gnu.org>

	* build-glib1.sh: Use more portable syntax for functions.  Fall
	back to "ftp" for download, useful on BSD.
	* build-glib2.sh: Likewise.

	* build-glib1.sh: New file - download and compile glib 1.2.x,
	then compile mc against it.
	* build-glib2.sh: New file - download and compile glib 2.x with
	dependencies (gettext, pkgconfig), then compile mc against it.
	* Makefile.am: Distribute them.

2003-10-29  Pavel Roskin  <proski@gnu.org>

	* acinclude.m4 (MC_UNDELFS_CHECKS): Don't use internal Autoconf
	variables.

	* configure.in: Rewrite check for mmap() to avoid using internal
	variables of Autoconf.  Rename the rest of ac_cv_* to mc_cv_*.

	* configure.in: Use AC_CHECK_MEMBERS to check fields of struct
	stat.  Adjust all dependencies.

	* acinclude.m4 (AC_STRUCT_LINGER): Remove, use AC_CHECK_MEMBERS
	instead.

	* configure.in: Define SLANG_POSIX_SIGNALS if all 4 required
	functions are present.  Remove references to extraconf.h.
	* extraconf.h: Eliminate.
	* Makefile.am: Remove extraconf.h.

	* configure.in: Move ext2fs undelete support ...
	* acinclude.m4 (MC_WITH_VFS): ... here.
	* extraconf.h: Remove VFS logic, it's enforced in configure now.

	* acinclude.m4 (MC_WITH_VFS): Use AC_SEARCH_LIBS when possible.
	Allow disabling network code by --disable-netcode.

2003-10-28  Pavel Roskin  <proski@gnu.org>

	* configure.in: Don't check if "file" can use stdin - it's
	unused now.

2003-10-25  Pavel Roskin  <proski@gnu.org>

	* extraconf.h: Don't define HAVE_GRANTPT forcedly if grantpt()
	wasn't found.  Don't define HAVE_CRYPT, it's unused now.

	* configure.in: Remove check for socketpair().  Add new option
	--enable-background.
	* extraconf.h: Don't define WITH_BACKGROUND.

2003-10-14  Pavel Roskin  <proski@gnu.org>

	* configure.in: Don't check for seekdir() and telldir().

2003-09-23  Pavel Roskin  <proski@gnu.org>

	* doc/sr/Makefile.am: Don't install mcserv documentation if mcfs
	support is disabled.
